skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_theme_system.snap
---
source: tests/snapshot_overview.rs
expression: rendered
---
theme=system (System terminal palette)
title=Style::new().cyan().bg(Color::Reset).bold()
selection=Style::new().fg(Color::Reset).bg(Color::Reset).bold().reversed()
warning=Style::new().yellow().bg(Color::Reset)
"┌ Flightdeck ──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck  session demo-mixed  owner pi · %25 · /repo/demo  daemon: file-mode  elapsed 2h25m  AH:1 ISS:1 WF:1  P:1 S:1 W:1   stale-warn 4m                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Live feed │ Conversations │ Conflicts & merges (issue mode) │ Decisions │ Daemon                                                                                                          │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ left rail ───────────────┐┌ sessions (3 tracked) ────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ detail ──────────────────────────────────┐"
"│States                    ││Kind    State        Harness    Title                     PR/worktree               Age      Decision             Activity    ││Fix dashboard state reader                │"
"│prompting    1            ││ISS     prompting    opencode   Fix dashboard state reade PR #44 · vst-101          1h35m    cleanup-prompt       4m          ││id VST-101                                │"
"│submitting   1            ││WF      submitting   codex      Build Rust dashboard      —                         58m      bash-permission-prom 4m          ││kind issue  state prompting               │"
"│waiting      1            ││AH      waiting      pi         Watch daemon logs         —                         2h10m    —                    4m          ││substate cleanup prompt                   │"
"│                          ││                                                                                                                              ││pane %41                                  │"
"│Merge queue               ││                                                                                                                              ││cwd /repo/worktrees/vst-101               │"
"│• VST-101                 ││                                                                                                                              ││                                          │"
"│• VST-102                 ││                                                                                                                              ││Issue domain                              │"
"│                          ││                                                                                                                              ││issue VST-101                             │"
"│Conflict graph            ││                                                                                                                              ││PR #44                                    │"
"│• VST-101 ↔ VST-102       ││                                                                                                                              ││worktree /repo/worktrees/vst-101          │"
"│                          ││                                                                                                                              ││scope declared=5 actual=7                 │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Last decision                             │"
"│                          ││                                                                                                                              ││cleanup-prompt → NO — sibling worktree    │"
"│                          ││                                                                                                                              ││still live                                │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" Tab/Shift+Tab tabs  j/k select  r reload  Ctrl+N noise: hidden  / filter:off  Alt+M compact  ? help  q quit                                                                                            "
"                                                                                                                                                                                                        "
